--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -136,11 +136,11 @@
                     isMultiple = false,
                     help = "")
                     
-                  @bootstrap3.selectInt(leagueForm("numGames"),
+                  <!--@bootstrap3.selectInt(leagueForm("numGames"),
                     label = "Number of Games per Team",
                     optionMap = models.leagues.League.num(),
                     isMultiple = false,
-                    help = "")
+                    help = "")-->
                   
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
@@ -295,12 +295,23 @@
           <table>
             @for(teams <- league.getScheduleList()){
               <tr><td><h3>@teams.substring(0, teams.indexOf("-"))</h3></td></tr>
-              @System.out.println(teams.substring(teams.indexOf("-"), teams.indexOf("~")))
-              @System.out.println(teams.substring(teams.indexOf("~")))
-              <tr><td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getTeamName()</p></span></a></td>
-              <td class = "vs"><p> vs &nbsp&nbsp&nbsp&nbsp</p></td>
-              <td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getTeamName()</p></span></a></td></tr>
-            }
+               <tr>
+               @if(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~")) == "null"){
+                  <td class = "sched"><a href = "#"><span><p>Bye</p></span></a></td>
+                }
+                @if(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~")) != "null"){
+                  <td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("-") + 1, teams.indexOf("~"))).getTeamName()</p></span></a></td>
+                }
+                
+                @if(teams.substring(teams.indexOf("~") + 1) != "null"){
+                  <td class = "vs"><p> vs &nbsp&nbsp&nbsp&nbsp</p></td>
+                  <td class = "sched"><img src="@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getImageUrl()" class="img-one"><a href = "@routes.Teams.showTeam(models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getId())"><span><p>@models.teams.Team.getTeam(teams.substring(teams.indexOf("~") + 1)).getTeamName()</p></span></a></td></tr>
+                }
+                @if(teams.substring(teams.indexOf("~") + 1) == "null"){
+                  <td class = "sched"<a href = "#"><span><p>Bye</p></span></a></td>
+                }
+				</tr>
+			}
           </table>
         </div>
         @if(league.getCourt() != null){
