Fix carousel image on index page

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -26,6 +26,12 @@ body {
     height: 200px;
 }
 
+.index-car {
+    background-size: cover;
+    background-position: center;
+    height: 280px;
+}
+
 .btn {
   border-color: #F77E07;
   background-color: #F77E07;
