--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -32,41 +32,38 @@
                 </div>
                 <div class="col-md-6 hidden-xs">
                     <div class="well">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            </ol>
-
-                                <!-- Wrapper for slides -->
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img src="@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")" alt="..."
-                                    height="500" width="450px">
-                                    <div class="carousel-caption"></div>
-                                </div>
-                                <div class="item">
-                                    <img src="http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG"
-                                    alt="..." height="500" width="450px">
-                                    <div class="carousel-caption">For Hawaii Hoopers</div>
-                                </div>
-                                <div class="item">
-                                    <img
-                                    src="http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384"
-                                    alt="..." height="500" width="450px">
-                                    <div class="carousel-caption">Meet our team</div>
-                                </div>
-                            </div>
-
-                                <!-- Controls -->
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span
-                            class="glyphicon glyphicon-chevron-left"></span>
-                            </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span
-                        class="glyphicon glyphicon-chevron-right"></span>
-                        </a>
-                        </div>
+                          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+				            <!-- Indicators -->
+				            <ol class="carousel-indicators">
+				              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				            </ol>
+				        
+				            <!-- Wrapper for slides -->
+				            <div class="carousel-inner">
+				              <div class="item active">
+				                    <div class ="index-car" style = "background-image: url('@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")');"></div>
+				                    <div class="carousel-caption"></div>
+				                  </div>
+				                  <div class="item">
+				                    <div class ="index-car" style = "background-image: url('http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG');"></div>
+				                    <div class="carousel-caption">For Hawaii Hoopers</div>
+				                  </div>
+				                  <div class="item">
+				                    <div class ="index-car" style = "background-image: url('http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384');"></div>
+				                    <div class="carousel-caption">Meet our team</div>
+				                  </div>
+				            </div>
+				        
+				            <!-- Controls -->
+				            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+				              <span class="glyphicon glyphicon-chevron-left"></span>
+				            </a>
+				            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+				              <span class="glyphicon glyphicon-chevron-right"></span>
+				            </a>
+				          </div>
                     </div>
                 </div>
                 <div class="col-md-3">
