--- a/app/views/Home.scala.html
+++ b/app/views/Home.scala.html
@@ -1,5 +1,7 @@
 @(title: String, games: List[models.games.Game], isLoggedIn: Boolean)
 
+@import utils.Tags._
+
 @Main(title, isLoggedIn) {
 <div class="container">
     <div class="row">
@@ -13,7 +15,7 @@
                     <tbody data-link="row" class="rowlink">
                       @for(game <- games) {
                       <tr>
-                        <td><a id="noColor" href="@routes.Games.getGame(game.getName())">@game.getName()</a></td>
+                        <td><a id="noColor" href="@routes.Games.getGame(game.getId, slugify(game.getName()))">@game.getName()</a></td>
                       </tr>
                       }
                     </tbody>
