--- a/app/views/teams/SearchTeams.scala.html
+++ b/app/views/teams/SearchTeams.scala.html
@@ -2,6 +2,7 @@
 
 @import helper._
 @import bootstrap3._
+@import utils.Tags._
 
 @Main(title, loggedIn) {
     <div class="container">
@@ -37,7 +38,7 @@
       <tbody data-link="row" class="rowlink">
         @for(team <- currentPage.getList()) {
          <tr>
-            <td><a href="@routes.Teams.showTeam(team.getId)">@team.getTeamName()</a></td>
+            <td><a href="@routes.Teams.showTeam(team.getId, slugify(team.getTeamName))">@team.getTeamName()</a></td>
             <td>@team.getLocation()</td>
             <td>@team.getTeamType()</td>
             <td>@team.getRosterList().size()</td>
