--- a/app/views/teams/EditTeamStats.scala.html
+++ b/app/views/teams/EditTeamStats.scala.html
@@ -2,8 +2,9 @@
 
 @import helper._
 @import bootstrap3._
+@import utils.Tags._
 
-@Main(title + team.getTeamName(), loggedIn) {
+@Main(title, loggedIn) {
     <div class="container">
     <div class="well">
    <h4>@team.getTeamName()</h4>
@@ -31,7 +32,7 @@
             <div class="tab-pane fade in active" id="stats">
                <img src="@routes.Assets.at("images/no-available-image.png")" height="40%" width="40%"> <br>
                <h4>Edit Stats: </h4>
-                  @form(routes.Teams.postStats(team.getId), 'class -> "form-horizontal") {
+                  @form(routes.Teams.postStats(team.getId, slugify(team.getTeamName)), 'class -> "form-horizontal") {
                   
                     @bootstrap3.text(statForm("record"),
                         label = "Record",
@@ -85,7 +86,7 @@
               
                   
                   }
-                    <a href="@routes.Teams.showTeam(team.getId)">Cancel</a>
+                    <a href="@routes.Teams.showTeam(team.getId, slugify(team.getTeamName))">Cancel</a>
                   
             </div>
             <div class="tab-pane fade" id="profiles">
