Ch ch ch ch changes

--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -13,7 +13,7 @@
 
     <script type="text/javascript">
 
-        //currently set to Univeristy of Hawaii at Manoa as deafult
+        //currently set to Univeristy of Hawaii at Manoa as default
         var uh = new google.maps.LatLng(21.2970, -157.8170);
         var hawaii = new google.maps.LatLng(21.4814, -157.9464)
 
